<resources>
    <string name="app_name">Uncook the book</string>
    <string name="leaderboard_label">Leaderboard</string>
    <string name="logout_label">Logout</string>
    <string name="home_label">Home</string>
    <string name="logo_accessibility">The app logo</string>
    <string name="login_explanation">
        In order to guarantee that our users are not robots and to store achievements you will obtain,
        we require you to login with your Google account. \n \n Press the button below to continue
    </string>
    <string name="server_id">
        234949874727-7pbe1gebujhcicmo1c0i35o948fe7oqa.apps.googleusercontent.com
    </string>
    <string name="login_failed">Sorry, we couldn\'t log you in. Please try again</string>
    <string name="friend_send_failed">Sorry, we couldn\'t add you as a friend. Please try again</string>
    <string name="friend_send_success">Done. You\'ll see him at the next refresh</string>
    <string name="article_data_retrieval_failed">Sorry, we couldn\'t retrieve any article data. Please try again</string>
    <string name="welcome">Welcome,  %1$s</string>
    <string name="link_hint">Link:</string>
    <string name="paste_label">Paste here the article link</string>
    <string name="info_title">How it works</string>
    <string name="info_paste_article">
        Paste any article link to get information regarding its truthfulness
        and to report whether it\'s reliable or not
    </string>
    <string name="info_accept">Got it</string>
    <string name="preference_file_key">key</string>
    <string name="skip_key">skip</string>
    <string name="url_key">url</string>
    <string name="website_rating">This website is rated as</string>
    <string name="website_rating_default_number">100% Legit</string>
    <string name="article_report_default_text">Article Legit</string>
    <string name="article_report_title">Article report</string>
    <string name="sample_url">https://www.repubblica.it/</string>
    <string name="sample_title">"Coronavirus. “Dell’app Immuni si sa troppo poco. Meglio la soluzione svizzera” - la Repubblica"</string>
    <string name="reported_fake">users reported it Fake</string>
    <string name="reported_legit">users reported it Legit</string>
    <string name="sample_number">115</string>
    <string name="paste_article_tag">paste_article_tag</string>
    <string name="report_article_tag">report_article_tag</string>
    <string name="login_tag">login_tag</string>
    <string name="leaderboard_tag">leaderboard_tag</string>
    <string name="sample_name">Matteo</string>
    <string name="leadearboard_position">Your position:</string>
    <string name="global_leadearboard">Global</string>
    <string name="friends_leadearboard">Friends</string>
    <string name="user_email_hint">Friend email:</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="add_friend">Add Friend</string>
    <string name="failed_leadearboard_retrieval">Sorry, we couldn\'t retrieve the leadearboard. Please try again</string>
    <string name="send_report">send_report</string>
    <string name="legit_key">shared_legit</string>
</resources>
