<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_home"
        style="@style/Widget.AppTheme.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:drawableLeft="@drawable/ic_home_black_24dp"
        android:drawableTint="@color/toolbarIconColor"
        android:fontFamily="@font/montserrat"
        android:text="@string/home_label"
        tools:ignore="RtlHardcoded" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="?android:attr/textColorPrimary" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_leadearboard"
        style="@style/Widget.AppTheme.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:drawableLeft="@drawable/ic_leaderboard"
        android:drawableTint="@color/toolbarIconColor"
        android:fontFamily="@font/montserrat"
        android:text="@string/leaderboard_label"
        tools:ignore="RtlHardcoded" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="?android:attr/textColorPrimary" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_logout"
        style="@style/Widget.AppTheme.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:drawableLeft="@drawable/ic_exit_to_app_black_24dp"
        android:drawableTint="@color/toolbarIconColor"
        android:fontFamily="@font/montserrat"
        android:text="@string/logout_label"
        tools:ignore="RtlHardcoded" />

</merge>